# pynetidx

./: Cargo.toml  build.rs  client.json  pyproject.toml  resolver.json  test.py
.devcontainer/: gcc12.json
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
.github/workflows/: CI.yml
src/: lib.rs
