[package]
name = "pynetidx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pynetidx"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
netidx = "0.28.1"
pyo3 = { version = "0.25", features = [
    "extension-module",
    "abi3-py310",
    "generate-import-lib",
] }
pyo3-async-runtimes = { version = "0.25", features = [
    "attributes",
    "tokio-runtime",
] }
tokio = { version = "1.45.1", features = ["full"] }


[build-dependencies]
python3-dll-a = "0.2.14"
